# mantis

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE.txt  README.md  pyproject.toml  requirements_test.txt  setup.py
.github/workflows/: python-app.yml
Wine_predictor/: dataset.py  main.py
src/Wine_predictor/: dataset.py  linearmodel.py  main.py
src/cats_dogs_predictor/: model.py  src.py
src/mantis/: __init__.py  compatibility_checks.py  first_tensorflow_project.py  logger.py  main.py  path_helpers.py
src/mantis/controllers/: base.py  controller_elpv.py
src/mantis/dataset/: dataset_configs.py  datasets.py  downloaders.py  schemas.py
src/mantis/dataset/base/: __init__.py  dataset_configs_base.py  datasets_base.py  downloaders_base.py
src/mantis/image/: checks.py  mirrors.py  rotations.py  superimposition.py  translations.py
src/mantis/model/: base.py
src/mantis/model/cnn/: base.py  elpv.py  elpv_vgg16.py
src/mantis/tui/: app.py
src/mantis/tui/widgets/: button.py  header.py  infopanel.py  menus.py  selection_item.py
src/tmap-defectdetector/: logger.py  main.py
src/tmap-defectdetector/config/: directories.py
src/tmap_defectdetector/: __init__.py  compatibility_checks.py  logger.py  main.py
src/tmap_defectdetector/controllers/: base.py  controller_elpv.py
src/tmap_defectdetector/dataset/: dataset_configs.py  datasets.py  downloaders.py  schemas.py
src/tmap_defectdetector/dataset/base/: dataset_configs_base.py  datasets_base.py  downloaders_base.py  schemas_base.py
src/tmap_defectdetector/image/: __init__.py  checks.py  color.py  mirrors.py  rotations.py  translations.py
src/tmap_defectdetector/model/: __init__.py  base.py  plots.py  tflow.py
src/tmap_defectdetector/model/cnn/: base.py  elpv.py  elpv_vgg16.py
src/tmap_defectdetector/pathconfig/: path_helpers.py  paths.py
src/tmap_defectdetector/tui/: app.py  colors.py  events.py  home.py  styles.py  widgets.py
src/tmap_defectdetector/tui/widgets/: button.py  header.py  infopanel.py  menus.py  selection_item.py  statusvars.py
tests/: test_datasets.py
tests/test_Wine_predictor/: test_dataset.py
tests/test_tmap_defectdetector/: test_compatibility_checks.py  test_first_tensorflow_project.py  test_logger.py  test_main.py
tests/test_tmap_defectdetector/dataset/: test_dataset_configs.py  test_datasets.py  test_downloaders.py  test_schemas.py
tests/test_tmap_defectdetector/dataset/base/: test_dataset_configs_base.py  test_datasets_base.py  test_downloaders_base.py  test_schemas_base.py
tests/test_tmap_defectdetector/image/: conftest.py  image_mocks.py  test_checks.py  test_mirrors.py  test_rotations.py  test_superimposition.py  test_translations.py
tests/test_tmap_defectdetector/model/: test_tflow.py
tests/test_tmap_defectdetector/pathconfig/: test_path_helpers.py  test_paths.py
tmap_defectdetector/: dataset_downloaders.py  dataset_loading.py  datasets.py  image_helpers.py  logger.py  main.py  samples.py
tmap_defectdetector/config/: __init__.py  path_helpers.py  paths.py
tmap_defectdetector/dataset/: dataset_config_base.py  dataset_configs.py  datasets.py  downloaders.py  schemas.py
tmap_defectdetector/dataset/base/: dataset_configs_base.py  datasets_base.py  downloaders_base.py  schemas_base.py
tmap_defectdetector/image/: checks.py  mirrors.py  rotations.py  translations.py
tmap_defectdetector/model/: tflow.py
