[build-system]
requires = [
    "setuptools>=61.*.*",
    "wheel",
    "importlib-metadata>=4.*.*",
]
python_requires = '>=3.10.*'
build-backend = "setuptools.build_meta"

[project]
name = "tmap-defect-detector"
version = "2.0.1"
description = "ML-powered defect detector"
dependencies = [
    "tensorflow~=2.8.0",
    "GitPython~=3.1.27",
    "rich~=12.2.0",
    "numpy~=1.22.3",
    "seaborn~=0.11.2",
    "sklearn~=0.0",
    "pandas~=1.4.2",
    "opencv-python~=4.5.5.64",
    "tqdm~=4.64.0",
    "textual~=0.1.17"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: UNIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    ]
requires-python = ">=3.10"

# Not sure if other authors want to be mentioned by name given this repo is currently public.
authors = [
    { name = "Joost Bergen", email = "joost@bergensoftware.nl" },
    ]
license = {file = "LICENSE.txt"}
readme = {file = "README.md", content-type = "x-rst"}

[tool.setuptools]
platforms = ["UNIX", "MacOS", "Windows"]

[project.optional-dependencies]
dev = ["pylint~=2.12.2", "black~=22.1.0", "mypy~=0.942", "ipdb~=0.13.9"]
test = ["pytest~=7.1.1", "numpy~=1.22.3"]

[tool.black]
line-length = 112
include = '\.pyi?$'
skip-magic-trailing-comma = false
target-version = ['py310']

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests"
]
pythonpath = "src"
